Fix button alignment see #142

--- a/src/blocks/cards-collection/scss/_style.scss
+++ b/src/blocks/cards-collection/scss/_style.scss
@@ -11,10 +11,3 @@
 		text-align: $alignment;
 	}
 }
-
-.novablocks-cards-collection--align-right {
-
-	.wp-block-buttons {
-		flex-direction: row-reverse;
-	}
-}
